welcome.lessons.welcome.methods.slug.SlugHunting.scala.error
SlugHunting:10: error: illegal start of simple expression
	def isFacingTrail():Boolean = { 
        ^