welcome.lessons.welcome.methods.slug.SlugHunting.scala.code
var caseVerte = false

def hunt() {
	if (estSurBiscuit==true) {
      prendBiscuit();
    }
  else 
  	
	def isFacingTrail():Boolean = { 
		if (estFaceMur==false) {
			avance();
  		if (getCouleurSol()==Color.green) {
  			recule();
    		caseVerte = true;
  	
    		}
    		else { 
      		recule();
  				caseVerte = false
      	}   
 		}
  	else gauche()
  	return caseVerte  
	}
}


